fixed footer on safari, removed shadows from landing

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,4 +1,5 @@
 footer {
+	padding-bottom: $margin-xs;
 	ul.social-icons {
 		list-style: none;
 		margin-bottom: $margin-xs;
