--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -85,7 +85,7 @@ $serif: 'Noto Serif', serif;
 // Background gradients
 
 $header-bg: linear-gradient(10deg,$blue-dark,lighten($blue-light,10%));
-$landing-bg: linear-gradient(-75deg, $blue-light,$blue-dark);
+$landing-bg: linear-gradient(-155deg,$blue-light,$blue-dark);
 
 
 // Text gradients
